# fnk

./: .gitignore  Cargo.toml  README.md  dev.bat  dev.sh  prod.sh
backend/: Cargo.toml
backend/migrations/: 20231010013330_init-tables.down.sql  20231010013330_init-tables.up.sql  20231012022525_tests.down.sql  20231012022525_tests.up.sql  20231109170007_question.down.sql  20231109170007_question.up.sql
backend/src/: api.rs  auth.rs  lib.rs  main.rs  model.rs  request.rs  response.rs  util.rs
backend/src/http/: auth.rs  error.rs  mod.rs  question.rs  student.rs  teacher.rs
backend/src/http/test/: mod.rs  student.rs
frontend/: Cargo.toml  Dioxus.toml  Trunk.toml  index.html
frontend/src/: components.rs  dashboard.rs  drawing.rs  forms.rs  main.rs  test.rs
frontend/src/api/: auth.rs  dashboard.rs  mod.rs  test.rs
frontend/src/components/: canvas.rs  dashboard.rs  drawing.rs  forms.rs  mod.rs  test.rs
frontend/src/components/dashboard/: drop_down.rs  mod.rs  navbar.rs
