[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.6.2"
axum-extra = { version = "0.8", features = ["cookie"] }
bb8 = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rand_core = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "uuid",
] }
time = "0.3.29"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
