[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = "0.7.4"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bb8 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
jsonwebtoken = "8.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["time_0_3"] }
sqlx = { version = "0.7", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "uuid",
] }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.3", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
