[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
non_snake_case = { level = "allow", priority = 0 }

[dependencies]
uuid = { version = "1.5.0", features = ["v4", "serde", "js"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108"}
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = "0.4.1"
validator = { version = "0.16.1", features = ["derive"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "CssStyleDeclaration", "Document", "Element", "EventTarget", "HtmlCanvasElement", "HtmlElement", "MouseEvent", "Node", "Window", "SpeechSynthesis", "SpeechSynthesisUtterance"] }
